# finance_tracker_backend

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 36968c6747db_add_cascade_delete_to_bill_categories.py  57dde99e802a_change_tables_name.py  f77bf66940e9_create_tables.py
app/: deps.py  main.py
app/api/v1/: __init__.py
app/core/: aws_s3.py  config.py  database.py  security.py
app/crud/: bill.py  bill_category.py  user.py
app/models/: bill.py  bill_category.py  user.py
app/routers/: auth.py  bill.py  bill_category.py  user.py
app/schemas/: bill.py  bill_category.py  user.py
